fix button spacing

--- a/app/assets/stylesheets/shared/button.scss
+++ b/app/assets/stylesheets/shared/button.scss
@@ -3,3 +3,7 @@
   padding: 5em;
   margin: 10px;
 }
+.btn {
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
